--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.46</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.0.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
