--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>2.0.1.Final</version>
         </dependency>
         
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.1</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
